# deepseek-cli

./: Cargo.toml  Commands as: ```bash cmd```" So I will output the file creation as a code block with lang:deepseek.txt, and verification as cat command.  README.md  index.js  package.json  path ... ===END  path <content> ===END Run tests with: ===RUN cmd Output DONE when done."  srcession.rs
.deepseek/: MEMORY.md  raw_response.txt
.deepseek/journal/: 20260717-164732.md  20260717-181840.md  20260717-183318.md  20260717-183452.md  20260717-184158.md  20260717-191741.md  20260717-192259.md
api/: deepseek.js
cli/: run.js
path/to/: file <complete content>``` Verification as: ```bash cmd``` Reply DONE when done."
scripts/: generate_skills.py
src/: .rs  agent.rs  api.rs  config.rs  display.rs  evolve.rs  executor.rs  lib.rs  main.rs  memory.rs  planner.rs  recovery  recovery.rs  render.rs  reviewer.rs  router.rs  session.rs  skills.rs  skills_data.rs  state.rs  verifier.rs  workspace.rs
src/skills/: api.md  database.md  devops.md  mobile.md  performance.md  python.md  react.md  rust.md  security.md  testing.md
src/t/: git.rs
src/tools/: file.rs  mod.rs  shell.rs
test/: cli.test.js  run.test.js
tests/: comment_test.rs  integration.rs  integration_test.rs  sanity.rs
write_file:src/: main.rs
write_file:tests/: comment_test.rs
