[package]
name = "deepseek-cli"
version = "0.1.0"
edition = "2021"
description = "Autonomous DeepSeek-powered coding agent for your terminal"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
colored = "2"
dirs = "5"
futures = "0.3"
indicatif = "0.17"
syntect = "5"
regex = "1"
async-stream = "0.3"
tempfile = "3"
toml = "0.8"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
